--- a/ui/src/app/modules/admin/components/register/register.component.scss
+++ b/ui/src/app/modules/admin/components/register/register.component.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 
 .register {
+    height: calc(100vh - #{$header-height} - #{$footer-height} * 2 - #{$section-divider-height});
 }
 
 .register__header {
