--- a/ui/src/app/modules/blog/components/blog-view/blog-view.component.scss
+++ b/ui/src/app/modules/blog/components/blog-view/blog-view.component.scss
@@ -100,6 +100,7 @@
 
         .topics {
             margin: 0 auto;
+            min-height: calc(100vh - #{$header-height});
         }
     }
 }
