--- a/ui/src/app/modules/portfolio/components/portfolio-project-view/portfolio-project-view.component.scss
+++ b/ui/src/app/modules/portfolio/components/portfolio-project-view/portfolio-project-view.component.scss
@@ -2,7 +2,7 @@
 @import 'variables';
 
 .project {
-
+    min-height: calc(100vh - #{$header-height} - #{$footer-height} * 2 - #{$section-divider-height});
 }
 
 .project__name {
