--- a/ui/src/styles/_editor.scss
+++ b/ui/src/styles/_editor.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 
 .editor {
+    min-height: calc(100vh - #{$header-height} - #{$footer-height} * 2 - #{$section-divider-height});
 }
 
 .editor__header {
